--- a/task01.html
+++ b/task01.html
@@ -4,6 +4,6 @@
 
 <h2> Setting Up AWS-Infrastructure Using Terraform</h2>
 <h3> !!! Task Completed By Vikash Agrawal</h3><br>
-<img src="http://rg-static-data-bucket.s3.ap-south-1.amazonaws.com/kohli.jfif" height=700 />
+<img src="http://rg-static-data-bucket.s3.ap-south-1.amazonaws.com/kohli.jfif"/>
 </center>
 </body>
